--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
-  Hi app user
+  Hi user
   <script type="text/javascript" src="cordova.js"></script>
 </body>
 </html>
