--- a/www/index.html
+++ b/www/index.html
@@ -136,10 +136,7 @@
 
       <ons-row style="margin-top: 100px;">
         <ons-col align="center">
-          <ons-button modifier="light" ng-click="menu.toggleMenu()">
-            Toggle Menu
-          </ons-button>
-          <p style="color: #999; font-size: 13px;">Click "Toggle Menu" to close/open menu,<br> You can also swipe the page left/right.</p>
+          put a page here
         </ons-col>
       </ons-row>
     </ons-page>
